public/css/style.css
html {
  height: 100%;
}
body {
  margin: 0;
  padding: 0;
  height: 100%;
  background-image: radial-gradient(circle, #f2f9fe, #ebf7fe, #e5f4fe, #ddf2fe, #d6f0fd);
}
h2 {
  margin: 0 0 6px 0;
  font-weight: bold;
}
hr {
  margin: 14px 0;
  border-top: 1px solid #eee;
  border-bottom: 1px solid #fff;
}
ul {
  margin: 4px 0 0 0;
}
label,
h6 {
  color: #808080;
  font-size: 13px;
  font-weight: normal;
  text-shadow: -1px 1px 0 #fff;
}
/*
	login window
*/
#login {
  width: 380px;
}
#login .btn {
  float: left;
  width: 48%;
  font-size: 0.8rem;
}
#login .btn-btm {
  padding: 0;
}
#login .btn-left {
  margin-right: 4%;
}
#login #btn_sign_in {
  color: #fff;
  background-color: #4f46e5;
}
#login #btn_remember {
  background: #fff;
  border: 1px solid #ced4da;
}
#login #btn_remember:hover {
  background: #f8f9fa;
}
#login h6,
#login label {
  font-size: 0.8rem;
}
#login h6,
#login label,
#login #btn_remember {
  color: #808080;
  text-shadow: -1px 1px 0 #fff;
}
#login .fa {
  padding-right: 10px;
}
#login hr {
  clear: left;
}
#login .btm-links {
  font-size: 0.8rem;
  margin: 2px 0 0 0;
}
#login .btm-links #forgot-password {
  float: left;
  margin-left: 16px;
}
#login .btm-links #create-account {
  float: right;
  margin-right: 20px;
}
#account-form-container label {
  text-align: right;
  margin-top: 2px;
}
#account-form-container input,
#account-form-container select {
  font-size: 0.875rem;
}
#account-form-container .col-sm-9 {
  padding-left: 0;
}
#account-form-container .margin-zero {
  margin-bottom: 0;
}
#account-form-container .form-buttons {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}
#account-form-container .form-buttons>:not(:last-child) {
  margin-right: 0.5rem;
}
/*
	modal windows
*/
.modal .modal-dialog {
  width: 480px;
}
.modal .form-group {
  margin-bottom: 0px;
}
.modal .alert {
  margin-top: 10px;
  margin-bottom: 0;
  padding: 8px 15px 8px 15px;
}
.modal .alert-dismissable,
.modal .close {
  right: -4px;
}
.modal p {
  margin: 0;
  padding: 0;
}
.modal .modal-footer button {
  width: 80px;
}
.center-vertical {
  top: 50%;
  left: 50%;
  position: absolute;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

